compiler/fir/analysis-tests/testData/resolveWithStdlib/contracts/fromSource/good/callsInPlace/inPlaceLambda.dot
digraph inPlaceLambda_kt {
    graph [nodesep=3]
    node [shape=box penwidth=2]
    edge [penwidth=2]

    subgraph cluster_0 {
        color=red
        0 [label="Enter function bar" style="filled" fillcolor=red];
        subgraph cluster_1 {
            color=blue
            1 [label="Enter block"];
            subgraph cluster_2 {
                color=blue
                2 [label="Enter block"];
                3 [label="Exit block"];
            }
            subgraph cluster_3 {
                color=blue
                4 [label="Enter when"];
                subgraph cluster_4 {
                    color=blue
                    5 [label="Enter when branch condition "];
                    6 [label="Const: Boolean(true)"];
                    7 [label="Exit when branch condition"];
                }
                8 [label="Synthetic else branch"];
                9 [label="Enter when branch result"];
                subgraph cluster_5 {
                    color=blue
                    10 [label="Enter block"];
                    11 [label="Function call: R|<local>/x|.R|SubstitutionOverride<kotlin/Function0.invoke: R|kotlin/Unit|>|()" style="filled" fillcolor=yellow];
                    12 [label="Exit block"];
                }
                13 [label="Exit when branch result"];
                14 [label="Exit when"];
            }
            15 [label="Exit block"];
        }
        16 [label="Exit function bar" style="filled" fillcolor=red];
    }
    0 -> {1};
    1 -> {2};
    2 -> {3};
    3 -> {4};
    4 -> {5};
    5 -> {6};
    6 -> {7};
    7 -> {8 9};
    8 -> {14};
    9 -> {10};
    10 -> {11};
    11 -> {12};
    12 -> {13};
    13 -> {14};
    14 -> {15};
    15 -> {16};

    subgraph cluster_6 {
        color=red
        17 [label="Enter function foo" style="filled" fillcolor=red];
        subgraph cluster_7 {
            color=blue
            18 [label="Enter block"];
            subgraph cluster_8 {
                color=blue
                19 [label="Enter block"];
                20 [label="Exit block"];
            }
            21 [label="Function call: R|<local>/x|.R|SubstitutionOverride<kotlin/Function0.invoke: R|kotlin/Unit|>|()" style="filled" fillcolor=yellow];
            22 [label="Postponed enter to lambda"];
            subgraph cluster_9 {
                color=blue
                23 [label="Enter function <anonymous>" style="filled" fillcolor=red];
                subgraph cluster_10 {
                    color=blue
                    24 [label="Enter block"];
                    25 [label="Function call: R|<local>/x|.R|SubstitutionOverride<kotlin/Function0.invoke: R|kotlin/Unit|>|()" style="filled" fillcolor=yellow];
                    26 [label="Exit block"];
                }
                27 [label="Exit function <anonymous>" style="filled" fillcolor=red];
            }
            28 [label="Postponed exit from lambda"];
            29 [label="Function call: R|/bar|(...)" style="filled" fillcolor=yellow];
            30 [label="Exit block"];
        }
        31 [label="Exit function foo" style="filled" fillcolor=red];
    }
    17 -> {18};
    18 -> {19};
    19 -> {20};
    20 -> {21};
    21 -> {22};
    22 -> {23 28 29};
    22 -> {23} [style=dashed];
    23 -> {24};
    24 -> {25};
    25 -> {26};
    26 -> {27};
    27 -> {28};
    28 -> {29};
    29 -> {30};
    30 -> {31};

}
