compiler/fir/analysis-tests/testData/resolveWithStdlib/contracts/fromSource/bad/callsInPlace/inLocalFunction.dot
digraph inLocalFunction_kt {
    graph [nodesep=3]
    node [shape=box penwidth=2]
    edge [penwidth=2]

    subgraph cluster_0 {
        color=red
        0 [label="Enter function foo" style="filled" fillcolor=red];
        subgraph cluster_1 {
            color=blue
            1 [label="Enter block"];
            subgraph cluster_2 {
                color=blue
                2 [label="Enter block"];
                3 [label="Exit block"];
            }
            4 [label="Local function declaration foo"];
            5 [label="Function call: R|<local>/localFun|()" style="filled" fillcolor=yellow];
            6 [label="Function call: R|<local>/b|.R|SubstitutionOverride<kotlin/Function0.invoke: R|kotlin/Unit|>|()" style="filled" fillcolor=yellow];
            7 [label="Exit block"];
        }
        8 [label="Exit function foo" style="filled" fillcolor=red];
    }
    subgraph cluster_3 {
        color=blue
        9 [label="Enter function localFun" style="filled" fillcolor=red];
        subgraph cluster_4 {
            color=blue
            10 [label="Enter block"];
            11 [label="Access variable R|<local>/a|"];
            12 [label="Function call: R|<local>/a|.R|SubstitutionOverride<kotlin/Function0.invoke: R|kotlin/Unit|>|()" style="filled" fillcolor=yellow];
            13 [label="Function call: R|<local>/a|.R|SubstitutionOverride<kotlin/Function0.invoke: R|kotlin/Unit|>|()" style="filled" fillcolor=yellow];
            14 [label="Exit block"];
        }
        15 [label="Exit function localFun" style="filled" fillcolor=red];
    }
    0 -> {1};
    1 -> {2};
    2 -> {3};
    3 -> {4};
    4 -> {9 5};
    4 -> {9} [style=dashed];
    5 -> {6};
    6 -> {7};
    7 -> {8};
    9 -> {10};
    10 -> {11};
    11 -> {12};
    12 -> {13};
    13 -> {14};
    14 -> {15};

}
